--- a/src/app/pages/test-page/test-page.component.html
+++ b/src/app/pages/test-page/test-page.component.html
@@ -1,7 +1,7 @@
 <main role="mian">
   <!--主內容區-->
-  <div class="master-pages-container-cont-layout">
-    <div class="master-pages-container-cont">
+  <div class="main-pages-container-cont-layout">
+    <div class="main-pages-container-cont">
       <!--內容放置區-->
       <div class="cont-row2">
         <div class="cont">
@@ -22,13 +22,16 @@
                 </li>
               </ul>
             </nav>
-            <span class="pages-title-more"><a class="back-btn" (click)="goBackService.back()"><i
-                  class="icon-back_02"></i>回上一頁</a></span>
+            <span class="pages-title-more"
+              ><a class="back-btn" (click)="goBackService.back()"
+                ><i class="icon-back_02"></i>回上一頁</a
+              ></span
+            >
           </h2>
           <!-- 頁面主標題 -->
-          <div class="pages-title-setting-modify">
-            <div class="space"></div>
-            <span class="page-title-modify">頁面抬頭</span>
+          <div class="main-pages-title">
+            <div class="main-pages-title-space"></div>
+            <span>頁面抬頭</span>
           </div>
           <!-- 搜尋列表 -->
           <div>
@@ -67,14 +70,29 @@
                   </li>
 
                   <li>
-                    <span><input type="text" class="form-control keywordInput" placeholder="請輸入關鍵字"
-                        [(ngModel)]="keyword" /></span>
+                    <span
+                      ><input
+                        type="text"
+                        class="form-control keywordInput"
+                        placeholder="請輸入關鍵字"
+                        [(ngModel)]="keyword"
+                    /></span>
                   </li>
                   <li>
-                    <input type="button" value="搜尋" class="btn-list btn-primary-color" (click)="search()" />
+                    <input
+                      type="button"
+                      value="搜尋"
+                      class="btn-list btn-primary-color"
+                      (click)="search()"
+                    />
                   </li>
                   <li style="float: right">
-                    <input type="button" value="新增來源" class="btn-list btn-primary-color" (click)="insertSource()" />
+                    <input
+                      type="button"
+                      value="新增來源"
+                      class="btn-list btn-primary-color"
+                      (click)="insertSource()"
+                    />
                   </li>
                 </ul>
               </div>
@@ -82,12 +100,19 @@
           </div>
           <!-- 表單欄位 -->
           <div class="mat-elevation-z8">
-            <table mat-table [dataSource]="dataSource" matSort class="table-list table-list-color03 rwd_table02">
+            <table
+              mat-table
+              [dataSource]="dataSource"
+              matSort
+              class="table-list table-list-color03 rwd_table02"
+            >
               <!-- status column 狀態 -->
               <ng-container matColumnDef="status">
                 <th mat-header-cell *matHeaderCellDef>狀態</th>
                 <td mat-cell *matCellDef="let element">
-                  <ng-container *ngIf="element.status === '合格'; else notQualified">
+                  <ng-container
+                    *ngIf="element.status === '合格'; else notQualified"
+                  >
                     <div class="data-source-data-share-green-ball"></div>
                   </ng-container>
                   <ng-template #notQualified>
@@ -135,8 +160,11 @@
                 <th mat-header-cell *matHeaderCellDef>啟動狀態</th>
                 <td mat-cell *matCellDef="let element">
                   <!-- {{ element.activationStatus }} -->
-                  <mat-slide-toggle [checked]="element.activationStatus === true" (change)="this.toggleChange(element)"
-                    class="mattoggle">
+                  <mat-slide-toggle
+                    [checked]="element.activationStatus === true"
+                    (change)="this.toggleChange(element)"
+                    class="mattoggle"
+                  >
                   </mat-slide-toggle>
                 </td>
               </ng-container>
@@ -145,13 +173,19 @@
                 <th mat-header-cell *matHeaderCellDef>傳輸監控</th>
                 <td mat-cell *matCellDef="let row">
                   <!-- {{ element.transmissionMonitoring }} -->
-                  <button class="data-source-images" (click)="
-                                          this.testService.navigateToPage(
-                                            '/data-source-transmission-monitor'
-                                          )
-                                        ">
-                    <img class="transmissionMonitoring" src="../../../assets/images/transmissionMonitoring.png"
-                      alt="Transmission Monitoring" />
+                  <button
+                    class="data-source-images"
+                    (click)="
+                      this.testService.navigateToPage(
+                        '/data-source-transmission-monitor'
+                      )
+                    "
+                  >
+                    <img
+                      class="transmissionMonitoring"
+                      src="../../../assets/images/transmissionMonitoring.png"
+                      alt="Transmission Monitoring"
+                    />
                   </button>
                 </td>
               </ng-container>
@@ -161,7 +195,11 @@
                 <td mat-cell *matCellDef="let row">
                   <!-- {{ element.cleanSetting }} -->
                   <button class="data-source-images">
-                    <img class="cleanSetting" src="../../../assets/images/cleanSetting.png" alt="cleanSetting" />
+                    <img
+                      class="cleanSetting"
+                      src="../../../assets/images/cleanSetting.png"
+                      alt="cleanSetting"
+                    />
                   </button>
                 </td>
               </ng-container>
@@ -169,18 +207,27 @@
               <ng-container matColumnDef="manage">
                 <th mat-header-cell *matHeaderCellDef>管理功能</th>
                 <td mat-cell *matCellDef="let row">
-                  <button class="btn-list btn-primary-table-color" (click)="editDataSource()">
+                  <button
+                    class="btn-list btn-primary-table-color"
+                    (click)="editDataSource()"
+                  >
                     修改
                   </button>
-                  <button class="btn-list btn-modify-table-color" (click)="deleteDataSource(row.dataSourceId)">
+                  <button
+                    class="btn-list btn-modify-table-color"
+                    (click)="deleteDataSource(row.dataSourceId)"
+                  >
                     刪除
                   </button>
                 </td>
               </ng-container>
 
               <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-              <tr mat-row *matRowDef="let row; columns: displayedColumns"
-                [ngClass]="{ 'row-not-qualified': row.status !== '合格' }"></tr>
+              <tr
+                mat-row
+                *matRowDef="let row; columns: displayedColumns"
+                [ngClass]="{ 'row-not-qualified': row.status !== '合格' }"
+              ></tr>
               <tr class="mat-row" *matNoDataRow>
                 <td class="mat-cell" colspan="5">沒有資料</td>
               </tr>
