--- a/src/assets/scss/header-style.scss
+++ b/src/assets/scss/header-style.scss
@@ -13,3 +13,38 @@
   font-size: 1.35rem;
   font-weight: 700;
 }
+
+.header-style {
+  > img {
+    margin: 1rem 1rem 0 1rem;
+    width: 10%;
+  }
+
+  .header-style-navbar {
+    width: 100%;
+    height: 5rem;
+    align-items: center;
+    background-color: $primary-color;
+
+    > ul {
+      height: inherit;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      > li {
+        list-style: none;
+        margin-right: 1rem;
+
+        button {
+          width: 8rem;
+          background-color: transparent;
+          border: transparent;
+          color: #ffffff;
+          font-size: large;
+          font-weight: 700;
+        }
+      }
+    }
+  }
+}
