完成頁面基本架構home/product-main/product-hot + 輪播圖小工具雛形30%

--- a/src/assets/scss/main-pages-container-layout.scss
+++ b/src/assets/scss/main-pages-container-layout.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: space-between;
   min-height: 592px;
-  background-color: red;
+  // background-color: red;
 }
 
 .main-pages-container-cont-layout {
