--- a/src/assets/scss/pages-title-layout.scss
+++ b/src/assets/scss/pages-title-layout.scss
@@ -57,9 +57,25 @@
   color: #232127;
   font-size: 1.5rem;
   font-weight: bold;
-  border-left: 8px solid #00aeef;
-  padding-left: 5px;
+  border-left: 10px solid #00aeef;
+  padding-left: 15px;
   margin-bottom: 20px;
+}
+
+.pages-cont-title-2 {
+  margin: 5px 0;
+  padding: 0;
+  color: #232127;
+  font-size: 1.5rem;
+  font-weight: bold;
+  border-left: 10px solid $primary-color;
+  padding-left: 15px;
+  margin-bottom: 20px;
+  height: 40px;
+  display: flex;
+  flex-direction: column-reverse;
+  justify-content: space-around;
+  
 }
 
 .category-title-layout {
