--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -7,7 +7,9 @@
 
       <!-- 內容放置區 -->
       <div class="container-row">
-        <div class="cont"></div>
+        <div class="cont">
+          <app-card [cardData]="hotProuctCard"></app-card>
+        </div>
       </div>
     </div>
   </div>
