--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,6 +25,7 @@ $primary-color: #3498db; // 蓝色
 //輪播圖
 @import "/src/assets/scss/carousel-style.scss";
 // ===================
+@import "/src/assets/scss/card-style.scss";
 
 @import "/src/assets/scss/btn-list.scss";
 @import "/src/assets/scss/cont-style-list.scss";
