--- a/src/app/common/card/card.component.html
+++ b/src/app/common/card/card.component.html
@@ -1,20 +1,20 @@
 <div class="card-style-box">
-  <!-- <div class="card-style-title">{{ cardDataTitle }}</div> -->
+  <div class="card-style-title">{{ cardDataTitle }}</div>
+  <div class="card-style-content">
+    <mat-card *ngFor="let item of cardData; let i = index" class="card-container-style">
+      <mat-card-header>
+        <mat-card-title-group>
+          <mat-card-title>{{ item.title }}</mat-card-title>
+          <mat-card-subtitle>{{ item.model }}</mat-card-subtitle>
+        </mat-card-title-group>
+      </mat-card-header>
+      <img mat-card-image src="{{ item.imgUrl }}" alt="Photo of a Shiba Inu" />
+      <mat-card-content>{{ item.descripation }}</mat-card-content>
+      <mat-card-actions>
+        <!-- <button mat-button *ngFor="let itemTag of item.tag">{{ itemTag }}</button> -->
+        <button mat-button (click)="check_more_card(i)" class="check_more_btn">檢視更多</button>
+      </mat-card-actions>
+    </mat-card>
+  </div>
 
-  <mat-card
-    *ngFor="let item of cardData; let i = index"
-    class="card-container-style"
-  >
-    <mat-card-header>
-      <mat-card-title-group>
-        <mat-card-title>{{ item.title }}</mat-card-title>
-        <mat-card-subtitle>{{ item.model }}</mat-card-subtitle>
-      </mat-card-title-group>
-    </mat-card-header>
-    <img mat-card-image src="{{ item.imgUrl }}" alt="Photo of a Shiba Inu" />
-    <mat-card-content>{{ item.descripation }}</mat-card-content>
-    <mat-card-actions>
-      <button mat-button *ngFor="let itemTag of item.tag">{{ itemTag }}</button>
-    </mat-card-actions>
-  </mat-card>
 </div>
