--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -8,7 +8,7 @@
       <!-- 內容放置區 -->
       <div class="container-row">
         <div class="cont">
-          <app-card [cardData]="hotProuctCard"></app-card>
+          <app-card [cardData]="hotProuctCard" [cardDataTitle]="cardDataTitleFormHome['hot']"></app-card>
         </div>
       </div>
     </div>
