--- a/src/assets/scss/header-style.scss
+++ b/src/assets/scss/header-style.scss
@@ -15,7 +15,7 @@
 }
 
 .header-style {
-  > img {
+  >img {
     margin: 1rem 1rem 0 1rem;
     width: 10%;
   }
@@ -24,15 +24,15 @@
     width: 100%;
     height: 5rem;
     align-items: center;
-    background-color: $primary-color;
+    background-color: $primary-background-color;
 
-    > ul {
+    >ul {
       height: inherit;
       display: flex;
       justify-content: center;
       align-items: center;
 
-      > li {
+      >li {
         list-style: none;
         margin-right: 1rem;
 
