--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -9,6 +9,8 @@
       <div class="container-row">
         <div class="cont">
           <app-card [cardData]="hotProuctCard" [cardDataTitle]="cardDataTitleFormHome['hot']"></app-card>
+
+          <app-card [cardData]="newArrivalProuctCard" [cardDataTitle]="cardDataTitleFormHome['newArrival']"></app-card>
         </div>
       </div>
     </div>
