--- a/src/assets/scss/carousel-style.scss
+++ b/src/assets/scss/carousel-style.scss
@@ -1,29 +1,45 @@
 .carousel-image-container {
-  position: relative; /* 添加相對定位 */
+  position: relative;
+  /* 添加相對定位 */
   width: 90%;
   height: 200px;
   margin: 0 auto;
   border: 1px solid #000;
   background-color: #fff;
 }
+
 .carousel-operation-btn {
+  width: 100%;
+  position: absolute;
+  top: 45%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .carousel-image {
   width: 100%;
   height: 100%;
 }
+
 .carousel-bottom-bar {
-  position: absolute; /* 使用絕對定位 */
-  bottom: 0.4rem; /* 定位到容器的底部 */
+  position: absolute;
+  /* 使用絕對定位 */
+  bottom: 0.4rem;
+  /* 定位到容器的底部 */
   width: 100%;
   text-align: center;
   display: flex;
   justify-content: center;
 }
+
 .carousel-bottom-bar-rectangle {
-  width: 2.4rem; /* 或者您希望的寬度 */
-  height: 0.4rem; /* 或者您希望的高度 */
-  border: 1px solid #000; /* 這裡設置長方體的背景顏色 */
-  margin-right: 1rem; /* 添加一些間距 */
+  width: 2.4rem;
+  /* 或者您希望的寬度 */
+  height: 0.4rem;
+  /* 或者您希望的高度 */
+  border: 1px solid #000;
+  /* 這裡設置長方體的背景顏色 */
+  margin-right: 1rem;
+  /* 添加一些間距 */
 }
