--- a/src/assets/scss/carousel-style.scss
+++ b/src/assets/scss/carousel-style.scss
@@ -2,7 +2,7 @@
   position: relative;
   /* 添加相對定位 */
   width: 90%;
-  height: 200px;
+  height: 400px;
   margin: 0 auto;
   border: 1px solid #000;
   background-color: #fff;
@@ -10,16 +10,55 @@
 
 .carousel-operation-btn {
   width: 100%;
+  height: 100%;
+  top: 0%;
   position: absolute;
-  top: 45%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+
+  .mat-mdc-button.mat-mdc-button-base {
+    height: 100%;
+  }
+
+  .mat-mdc-button.mat-warn,
+  .mat-mdc-outlined-button.mat-warn {
+    --mat-mdc-button-persistent-ripple-color: #ff1100;
+    --mat-mdc-button-ripple-color: rgba(244, 67, 54, 0.1);
+  }
+
+  >button {
+    width: 10%;
+  }
+
+  >.mat-mdc-button>.mat-icon {
+    font-size: 2rem;
+    width: 2rem;
+    height: 2rem;
+  }
 }
 
 .carousel-image {
   width: 100%;
   height: 100%;
+  position: relative;
+  overflow: hidden;
+}
+
+.carousel-image img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  // height: auto;
+  object-fit: cover;
+  opacity: 0;
+  transition: opacity 0.5s ease;
+}
+
+.carousel-image img.active {
+  opacity: 1;
 }
 
 .carousel-bottom-bar {
@@ -34,12 +73,20 @@
 }
 
 .carousel-bottom-bar-rectangle {
-  width: 2.4rem;
+  width: 3.5rem;
   /* 或者您希望的寬度 */
-  height: 0.4rem;
+  height: 0.9rem;
   /* 或者您希望的高度 */
-  border: 1px solid #000;
+  border: 0.1rem solid #000000;
   /* 這裡設置長方體的背景顏色 */
-  margin-right: 1rem;
+  margin-right: 1.2rem;
   /* 添加一些間距 */
+}
+
+.carousel-bottom-bar-rectangle.active {
+  // 比如黑色表示当前图片
+  background-color: #ffffff88;
+
+  // transition: background-color 2s linear;
+  /* 與自動播放間隔相同 */
 }
