--- a/src/styles.scss
+++ b/src/styles.scss
@@ -30,6 +30,7 @@ $primary-font-color: #e6e6e6;
 @import "/src/assets/scss/carousel-style.scss";
 // ===================
 @import "/src/assets/scss/card-style.scss";
+@import "/src/assets/scss/product-page.scss";
 
 @import "/src/assets/scss/btn-list.scss";
 @import "/src/assets/scss/cont-style-list.scss";
