2024/02/26 make easy routerLink

--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -40,8 +40,8 @@
           </button>
         </mat-menu>
       </li>
-      <li><button mat-button>技術支持</button></li>
-      <li><button mat-button>聯繫我們</button></li>
+      <li><button mat-button routerLink="technical_support">技術支持</button></li>
+      <li><button mat-button routerLink="contact_us">聯繫我們</button></li>
     </ul>
   </div>
 </div>
