2024/02/27 間單新增最消息的格式

--- a/src/app/pages/contact-us/contact-us.component.html
+++ b/src/app/pages/contact-us/contact-us.component.html
@@ -4,7 +4,7 @@
     <div class="main-pages-container-cont">
       <!-- 內容放置區 -->
       <div class="container-row">
-        聯繫我們
+        <p class="pages-title-2">聯繫我們</p>
       </div>
     </div>
   </div>
