--- a/src/app/pages/technical-support/technical-support.component.html
+++ b/src/app/pages/technical-support/technical-support.component.html
@@ -4,7 +4,7 @@
     <div class="main-pages-container-cont">
       <!-- 內容放置區 -->
       <div class="container-row">
-        技術支持
+        <p class="pages-title-2">技術支持 </p>
       </div>
     </div>
   </div>
