2024/02/28 catch錯誤頁面與最新消息設定

--- a/src/assets/scss/container.style.scss
+++ b/src/assets/scss/container.style.scss
@@ -11,6 +11,11 @@
   border-radius: 0 0 10px 10px;
 }
 
+.cont-diff{
+  align-items: center;
+  justify-content: space-around;
+}
+
 .cont {
   margin: 0;
   flex-grow: 1;
