--- a/src/assets/scss/main-pages-style.scss
+++ b/src/assets/scss/main-pages-style.scss
@@ -13,3 +13,11 @@
   background-color: transparent;
   flex-grow: 1;
 }
+
+.main-pages-container-cont-2{
+  //width: 60%;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+}
