--- a/src/assets/scss/pages-title.scss
+++ b/src/assets/scss/pages-title.scss
@@ -3,3 +3,9 @@
   color: #232127;
   letter-spacing: 0.1em;
 }
+
+.pages-title-3 {
+  font-size: 2em;
+  color: #232127;
+  letter-spacing: 0.075em;
+}
