--- a/src/styles.scss
+++ b/src/styles.scss
@@ -49,3 +49,5 @@ $primary-font-color: #e6e6e6;
 @import "/src/assets/scss/search-layout.scss";
 @import "/src/assets/scss/sort-table-layout.scss";
 @import "/src/assets/scss/table-list.scss";
+
+@import "/src/assets/scss/button-class.scss";
