--- a/src/app/pages/lastest-news/lastest-news.component.html
+++ b/src/app/pages/lastest-news/lastest-news.component.html
@@ -7,31 +7,21 @@
         <p class="pages-title-2">最新消息</p>
 
         <div class="cont-expansion-panel">
-          <mat-accordion>
-            <mat-expansion-panel hideToggle>
-              <mat-expansion-panel-header>
-                <mat-panel-title>
-                  This is the expansion title
-                </mat-panel-title>
-                <mat-panel-description>
-                  This is a summary of the content
-                </mat-panel-description>
-              </mat-expansion-panel-header>
-              <p>This is the primary content of the panel.</p>
-            </mat-expansion-panel>
+          <mat-accordion *ngFor="let data of fakeData">
             <mat-expansion-panel (opened)="panelOpenState = true"
                                  (closed)="panelOpenState = false">
               <mat-expansion-panel-header>
                 <mat-panel-title>
-                  Self aware panel
+                  {{ data.newsTitle }}
                 </mat-panel-title>
                 <mat-panel-description>
-                  Currently I am {{ panelOpenState ? 'open' : 'closed' }}
+                  消息時間：{{ data.newsTime }}
                 </mat-panel-description>
               </mat-expansion-panel-header>
-              <p>I'm visible because I am open</p>
+              <p>{{ data.newsContent }}</p>
             </mat-expansion-panel>
           </mat-accordion>
+
         </div>
 
       </div>
