2024/03/03 tech-support-page

--- a/src/assets/scss/button-class.scss
+++ b/src/assets/scss/button-class.scss
@@ -5,3 +5,10 @@
   width: 80%;
   height: 50px !important;
 }
+
+ /*提供檔案下載使用*/
+.button-class-2{
+  font-size: 1.1rem;
+  font-weight: bold;
+  background: $primary-background-color !important;
+}
