--- a/src/app/pages/lastest-news/lastest-news.component.html
+++ b/src/app/pages/lastest-news/lastest-news.component.html
@@ -7,21 +7,27 @@
         <p class="pages-title-2">最新消息</p>
 
         <div class="cont-expansion-panel">
-          <mat-accordion *ngFor="let data of fakeData">
+          <!--     切換按鈕     -->
+          <div class="expansion-handler-button">
+            <button mat-button (click)="accordion.openAll()">展開消息</button>
+            <button mat-button (click)="accordion.closeAll()">收起消息</button>
+          </div>
+
+          <mat-accordion #accordion="matAccordion"  class="expansion-accordion" multi>
             <mat-expansion-panel (opened)="panelOpenState = true"
-                                 (closed)="panelOpenState = false">
+                                 (closed)="panelOpenState = false" *ngFor="let data of fakeData">
               <mat-expansion-panel-header>
                 <mat-panel-title>
                   {{ data.newsTitle }}
                 </mat-panel-title>
-                <mat-panel-description>
+                <mat-panel-description >
                   消息時間：{{ data.newsTime }}
+                  <mat-icon>account_circle</mat-icon>
                 </mat-panel-description>
               </mat-expansion-panel-header>
               <p>{{ data.newsContent }}</p>
             </mat-expansion-panel>
           </mat-accordion>
-
         </div>
 
       </div>
