--- a/src/app/pages/technical-support/technical-support.component.html
+++ b/src/app/pages/technical-support/technical-support.component.html
@@ -3,8 +3,78 @@
   <div class="main-pages-container-cont-layout-l">
     <div class="main-pages-container-cont">
       <!-- 內容放置區 -->
-      <div class="container-row">
-        <p class="pages-title-2">技術支持 </p>
+      <div class="container-row tech-container-row">
+        <p class="pages-title-2">技術支持</p>
+        <div class="tech-container">
+          <!--  搜索欄 -->
+          <div class="tech-search-bar">
+            <!--產品類型-->
+            <mat-form-field>
+              <mat-label>產品類型</mat-label>
+              <mat-select>
+                <mat-option [value]="null">請選擇</mat-option>
+                <mat-option *ngFor="let product of techProducts" [value]="product">{{ product }}</mat-option>
+              </mat-select>
+            </mat-form-field>
+            <!--資料類型-->
+            <mat-form-field>
+              <mat-label>資料類型</mat-label>
+              <mat-select>
+                <mat-option [value]="null">請選擇</mat-option>
+                <mat-option *ngFor="let data of techDatas"  [value]="data">{{ data }}</mat-option>
+              </mat-select>
+            </mat-form-field>
+
+            <mat-form-field>
+              <mat-label>關鍵字搜索</mat-label>
+              <input matInput>
+            </mat-form-field>
+          </div>
+          <div class="table-and-paginator">
+            <!--  結果列表  -->
+            <table mat-table [dataSource]="dataSource">
+              <!--  產品類型  techProductType-->
+              <ng-container matColumnDef="techProductType">
+                <th mat-header-cell *matHeaderCellDef>產品類型</th>
+                <td mat-cell *matCellDef="let element"> {{ element.techProductType }}</td>
+              </ng-container>
+
+              <!--  資料類型  techDataType-->
+              <ng-container matColumnDef="techDataType">
+                <th mat-header-cell *matHeaderCellDef>資料類型</th>
+                <td mat-cell *matCellDef="let element"> {{ element.techDataType }}</td>
+              </ng-container>
+
+              <!--  資料類型  techDataType-->
+              <ng-container matColumnDef="techDocumentName">
+                <th mat-header-cell *matHeaderCellDef>檔案名稱</th>
+                <td mat-cell *matCellDef="let element"> {{ element.techDocumentName }}</td>
+              </ng-container>
+
+              <!--  資料類型  techDataType-->
+              <ng-container matColumnDef="function">
+                <th mat-header-cell *matHeaderCellDef>功能</th>
+                <td mat-cell *matCellDef="let element">
+                  <button mat-flat-button color="primary" class="button-class-2"
+                          (click)="techSupportDownload(element)">檔案下載
+                  </button>
+                </td>
+              </ng-container>
+
+
+              <tr mat-header-row *matHeaderRowDef=" displayedColumns"></tr>
+              <tr mat-row *matRowDef="let row; columns: displayedColumns; "></tr>
+            </table>
+            <mat-paginator [length]="100"
+                           [pageSize]="10"
+                           [pageSizeOptions]="[5, 10, 25, 100]"
+                           aria-label="Select page">
+            </mat-paginator>
+
+          </div>
+          <!--  分頁功能  -->
+        </div>
+
       </div>
     </div>
   </div>
