--- a/src/app/pages/technical-support/technical-support.component.scss
+++ b/src/app/pages/technical-support/technical-support.component.scss
@@ -6,17 +6,41 @@
   }
 }
 
+//.pages-title-2 {
+//  margin-bottom: 2rem;
+//  font-size: 2.5em;
+//  color: #232127;
+//  letter-spacing: 0.1em;
+//
+//  > span {
+//    font-weight: bold;
+//  }
+//
+//  > mat-icon {
+//    padding-left: 0.4rem;
+//    transform: scale(1.5);
+//    color: #666666;
+//  }
+//}
+
 .tech-container {
   width: 100%;
   display: flex;
   flex-direction: column;
 
   > .tech-search-bar {
-    display: flex;
-    flex-direction: row;
+    :nth-child(3) {
+      width: 30%;
+    }
 
     mat-form-field {
       margin-right: 3rem;
+      min-height: 56px;
+    }
+
+    .keyword {
+      display: flex;
+      flex-direction: row;
     }
   }
 
