--- a/src/assets/scss/pages-title.scss
+++ b/src/assets/scss/pages-title.scss
@@ -1,7 +1,18 @@
 .pages-title-2 {
+  margin-bottom: 2rem;
   font-size: 2.5em;
   color: #232127;
   letter-spacing: 0.1em;
+
+  > span {
+    font-weight: bold;
+  }
+
+  > mat-icon {
+    padding-left: 0.4rem;
+    transform: scale(1.5);
+    color: #666666;
+  }
 }
 
 .pages-title-3 {
