2024/03/04 建立常見問題(未完成)

--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -41,7 +41,8 @@
         </mat-menu>
       </li>
       <li><button mat-button routerLink="technical_support">技術支持</button></li>
-      <li><button mat-button routerLink="contact_us">聯繫我們</button></li>
+<!--      <li><button mat-button routerLink="contact_us">聯繫我們</button></li>-->
+      <li><button mat-button routerLink="faq">常見問題</button></li>
     </ul>
   </div>
 </div>
