--- a/src/app/pages/contact-us/contact-us.component.html
+++ b/src/app/pages/contact-us/contact-us.component.html
@@ -4,7 +4,10 @@
     <div class="main-pages-container-cont">
       <!-- 內容放置區 -->
       <div class="container-row">
-        <p class="pages-title-2">聯繫我們</p>
+        <div class="pages-title-2">
+          <span>聯絡我們</span>
+          <mat-icon>ring_volume</mat-icon>
+        </div>
       </div>
     </div>
   </div>
