--- a/src/app/pages/lastest-news/lastest-news.component.html
+++ b/src/app/pages/lastest-news/lastest-news.component.html
@@ -4,7 +4,10 @@
     <div class="main-pages-container-cont">
       <!-- 內容放置區 -->
       <div class="container-row">
-        <p class="pages-title-2">最新消息</p>
+        <div class="pages-title-2">
+          <span>最新消息</span>
+          <mat-icon>fiber_new</mat-icon>
+        </div>
 
         <div class="cont-expansion-panel">
           <!--     切換按鈕     -->
