--- a/src/app/pages/technical-support/technical-support.component.html
+++ b/src/app/pages/technical-support/technical-support.component.html
@@ -6,7 +6,7 @@
       <div class="container-row tech-container-row">
         <div class="pages-title-2">
           <span>技術支持</span>
-          <mat-icon>settings</mat-icon>
+          <mat-icon>build</mat-icon>
         </div>
         <div class="tech-container">
           <!--  搜索欄 -->
