--- a/src/app/pages/faq/faq.component.html
+++ b/src/app/pages/faq/faq.component.html
@@ -6,7 +6,7 @@
       <div class="container-row">
         <div class="pages-title-2">
           <span>常見問題</span>
-          <mat-icon>question_answer</mat-icon>
+          <mat-icon class="faq-icon">question_answer</mat-icon>
         </div>
 
         <div class="faq-content">
