--- a/src/app/pages/faq/faq.component.scss
+++ b/src/app/pages/faq/faq.component.scss
@@ -1,3 +1,5 @@
+@import "../../../styles.scss";
+
 .expansion-handler-button {
   margin: 1.2rem 1rem 0.6rem 1rem;
 }
@@ -19,4 +21,12 @@
   width: 100%;
   display: flex;
   flex-direction: column;
+
+  mat-chip-listbox{
+    margin-bottom: 0.5em;
+  }
+}
+
+.faq-icon:hover{
+  color: $primary-background-color !important;
 }
