2024/03/13 完成 1. page[技術支持]的產品類型巢狀option 2. page[常見問題]的mat-chip，並設定點擊後，搜索前的工作 3. 將上述兩者取得的資料改為從get-product-type.service帶入

--- a/src/app/pages/faq/faq.component.html
+++ b/src/app/pages/faq/faq.component.html
@@ -11,8 +11,11 @@
 
         <div class="faq-content">
           <!--  上方選擇  -->
-          <mat-chip-listbox aria-label="Fish selection">
-            <mat-chip-option *ngFor="let faq of faqList" (click)="selectFaq(faq)">{{ faq }}</mat-chip-option>
+          <mat-chip-listbox aria-label="Fish selection" multiple>
+            <mat-chip-option *ngFor="let faq of productTypes; index as i;"
+                             [selected] = 'tempArray.includes(i)'
+                             (click)="selectIndex(i)">{{ faq.productTypeShowName }}
+            </mat-chip-option>
           </mat-chip-listbox>
           <!--  畫面展開  -->
           <div class="cont-expansion-panel">
